@@ -1145,7 +1145,7 @@ static Connection *open_receiver(SMPP *smpp)
 static Msg *handle_dlr(SMPP *smpp, Octstr *destination_addr, Octstr *short_message, Octstr *message_payload, Octstr *receipted_message_id, long message_state)
 {
     Msg *dlrmsg = NULL;
-    Octstr *respstr = NULL, *msgid = NULL, *tmp;
+    Octstr *respstr = NULL, *msgid = NULL, *err = NULL, *tmp;
     int dlrstat = -1;
     
     /* first check for SMPP v3.4 and above */
@@ -1185,18 +1185,23 @@ static Msg *handle_dlr(SMPP *smpp, Octstr *destination_addr, Octstr *short_messa
         long curr = 0, vpos = 0;
         Octstr *stat = NULL;
         char id_cstr[65], stat_cstr[16], sub_d_cstr[13], done_d_cstr[13];
+        char err_cstr[4];
         int sub, dlrvrd, ret;
     
         /* get server message id */
         /* first try sscanf way if thus failed then old way */
         ret = sscanf(octstr_get_cstr(respstr),
-                    "id:%64[^s] sub:%d dlvrd:%d submit date:%12[0-9] done date:%12[0-9] stat:%10[^t^e]",
-                    id_cstr, &sub, &dlrvrd, sub_d_cstr, done_d_cstr, stat_cstr);
-        if (ret == 6) {
+                     "id:%64[^s] sub:%d dlvrd:%d submit date:%12[0-9] done "
+                     "date:%12[0-9] stat:%10[^t^e] err:%3[0-9]",
+                     id_cstr, &sub, &dlrvrd, sub_d_cstr, done_d_cstr, 
+                     stat_cstr, err_cstr);
+        if (ret == 7) {
             msgid = octstr_create(id_cstr);
             octstr_strip_blanks(msgid);
             stat = octstr_create(stat_cstr);
             octstr_strip_blanks(stat);
+            err = octstr_create(err_cstr);
+            octstr_strip_blanks(err);
         }
         else {
             debug("bb.sms.smpp", 0, "SMPP[%s]: Couldnot parse DLR string sscanf way,"
@@ -1217,6 +1222,13 @@ static Msg *handle_dlr(SMPP *smpp, Octstr *destination_addr, Octstr *short_messa
                     stat = octstr_copy(respstr, curr+5, vpos-curr-5);
             } else {
                 stat = NULL;
+            }
+            if ((curr = octstr_search(respstr, octstr_imm("err:"), 0)) != -1) {
+                vpos = octstr_search_char(respstr, ' ', curr);
+                if ((vpos-curr >0) && (vpos != -1))
+                    err = octstr_copy(respstr, curr+4, vpos-curr-4);
+            } else {
+                err = NULL;
             }
         }
         
@@ -1239,8 +1251,7 @@ static Msg *handle_dlr(SMPP *smpp, Octstr *destination_addr, Octstr *short_messa
         else
             dlrstat = DLR_FAIL;
                 
-        if (stat != NULL)
-            octstr_destroy(stat);
+        octstr_destroy(stat);
     }
 
     if (msgid != NULL) {
@@ -1287,9 +1298,11 @@ static Msg *handle_dlr(SMPP *smpp, Octstr *destination_addr, Octstr *short_messa
          * we found the delivery report in our storage, so recode the
          * message structure.
          * The DLR trigger URL is indicated by msg->sms.dlr_url.
+         * Add the DLR error code as billing identifier.
          */
         dlrmsg->sms.msgdata = octstr_duplicate(respstr);
         dlrmsg->sms.sms_type = report_mo;
+        dlrmsg->sms.binfo = octstr_duplicate(err);
     } else {
         error(0,"SMPP[%s]: got DLR but could not find message or was not interested "
                 "in it id<%s> dst<%s>, type<%d>",
@@ -1297,6 +1310,7 @@ static Msg *handle_dlr(SMPP *smpp, Octstr *destination_addr, Octstr *short_messa
                 octstr_get_cstr(destination_addr), dlrstat);
     }
     octstr_destroy(tmp);
+    octstr_destroy(err);
                 
     return dlrmsg;
 }
